--- a/ChatViewer/ChatViewer/View/MainWindow.xaml
+++ b/ChatViewer/ChatViewer/View/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
+        <TextBlock Text="{Binding Title}"/>
+        <Button Command="{Binding ButtonCommand}" Width="200" Height="100">test</Button>
     </Grid>
 </Window>
