--- a/ChatViewer/ChatViewer/View/MainWindow.xaml
+++ b/ChatViewer/ChatViewer/View/MainWindow.xaml
@@ -10,6 +10,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="25"/>
+            <RowDefinition Height="33"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         
@@ -24,7 +25,17 @@
             <TextBlock Grid.Row="1" Text="{Binding FileName}"/>
         </StackPanel>
 
-        <ListView Grid.Row="2" ItemsSource="{Binding ChatLog}">
+        <Grid Grid.Row="2" Margin="8,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="100"/>
+            </Grid.ColumnDefinitions>
+
+            <TextBox Text="{Binding SearchParam}" Height="25" VerticalAlignment="Center" VerticalContentAlignment="Center" Margin="0,0,8,0"></TextBox>
+            <Button Command="{Binding SearchCommand}" Grid.Column="1" Height="25" VerticalAlignment="Center">Search</Button>
+        </Grid>
+
+        <ListView Grid.Row="3" ItemsSource="{Binding ChatLog}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Time" DisplayMemberBinding="{Binding Time}"/>
