--- a/ChatViewer/ChatViewer/View/MainWindow.xaml
+++ b/ChatViewer/ChatViewer/View/MainWindow.xaml
@@ -6,6 +6,17 @@
         xmlns:local="clr-namespace:ChatViewer"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+
+    <Window.Resources>
+        <Style x:Key="HightlightedListViewItem" TargetType="ListViewItem">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding IsHighlighted}" Value="True">
+                    <Setter Property="Foreground" Value="Red"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -35,7 +46,7 @@
             <Button Command="{Binding SearchCommand}" Grid.Column="1" Height="25" VerticalAlignment="Center">Search</Button>
         </Grid>
 
-        <ListView Grid.Row="3" ItemsSource="{Binding ChatLog}">
+        <ListView Grid.Row="3" ItemsSource="{Binding ChatLog}" ItemContainerStyle="{StaticResource HightlightedListViewItem}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Time" DisplayMemberBinding="{Binding Time}"/>
