--- a/ChatViewer/ChatViewer/View/MainWindow.xaml
+++ b/ChatViewer/ChatViewer/View/MainWindow.xaml
@@ -42,7 +42,11 @@
                 <ColumnDefinition Width="100"/>
             </Grid.ColumnDefinitions>
 
-            <TextBox Text="{Binding SearchParam}" Height="25" VerticalAlignment="Center" VerticalContentAlignment="Center" Margin="0,0,8,0"></TextBox>
+            <TextBox Text="{Binding SearchParam, UpdateSourceTrigger=PropertyChanged}" Height="25" VerticalAlignment="Center" VerticalContentAlignment="Center" Margin="0,0,8,0">
+                <TextBox.InputBindings>
+                    <KeyBinding Key="Enter" Command="{Binding SearchCommand}"/>
+                </TextBox.InputBindings>
+            </TextBox>
             <Button Command="{Binding SearchCommand}" Grid.Column="1" Height="25" VerticalAlignment="Center">Search</Button>
         </Grid>
 
